# advent-of-code

./: pyproject.toml
advent_of_code/2022/: blank.ipynb  day01.ipynb  day02.ipynb  day03.ipynb  day04.ipynb  day05.ipynb  day06.ipynb  day08.ipynb  day09.ipynb
advent_of_code/2023/: blank.ipynb  day01.ipynb  day02.ipynb  day03.ipynb  day04.ipynb  day05.ipynb  day06.ipynb  day07.ipynb  day08.ipynb  day09.ipynb  day10.ipynb  day11.ipynb  day12.ipynb  day13.ipynb  day14.ipynb  day15.ipynb  day16.ipynb  day17.ipynb  day18.ipynb  day19.ipynb  day20.ipynb  day21.ipynb  day22.ipynb  day23.ipynb  day24.ipynb  day25.ipynb
