[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Alex Fabisiak <afabisiak@brex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
pandas = "^2.1.3"
jupyter = "^1.0.0"
ipykernel = "^6.27.1"
advent-of-code-data = {extras = ["nb"], version = "^2.0.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
